@@ -550,6 +550,7 @@ class HoleAnalysis(AnalysisBase):
             filenames.extend(universe.trajectory.filenames)
         except AttributeError:
             filenames.append(universe.trajectory.filename)
+        filenames = [name for name in filenames if name is not None]
         hole_filenames = '\n!    '.join(filenames)
         self._input_header = self.hole_header.format(hole_filenames)
 
